UX-9064 fix(sketch-validation-interface): fix wordbreak in rules configuration

--- a/packages/sketch-validation-interface/src/app/components/validation-configuration/validation-configuration.component.scss
+++ b/packages/sketch-validation-interface/src/app/components/validation-configuration/validation-configuration.component.scss
@@ -7,6 +7,7 @@
 
   li {
     list-style-type: none;
+    margin-bottom: 0.3em;
   }
 }
 
@@ -22,4 +23,14 @@ mat-form-field {
   & + & {
     margin-left: 10px;
   }
+}
+
+::ng-deep .mat-checkbox-label {
+  white-space: initial;
+  line-height: 1.5em;
+}
+
+// select with div to be a little bit more specific than the material margin
+::ng-deep div.mat-checkbox-inner-container {
+  margin-top: 0.4em;
 }
